[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/Waffles/Editor/Nodes/QuestionNode.gd" type="Script" id=1]

[node name="Question Node" type="GraphNode" groups=["branching_node", "graph_node"]]
margin_right = 364.0
margin_bottom = 86.0
title = "Question Node"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="timer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 348.0
margin_bottom = 64.0

[node name="CheckButton" type="CheckButton" parent="timer"]
margin_right = 76.0
margin_bottom = 40.0

[node name="LineEdit" type="LineEdit" parent="timer"]
margin_left = 80.0
margin_right = 332.0
margin_bottom = 40.0
size_flags_horizontal = 3
editable = false
placeholder_text = "Timer"

[node name="add button" type="Button" parent="."]
margin_left = 16.0
margin_top = 65.0
margin_right = 348.0
margin_bottom = 85.0
text = "Add"

[connection signal="close_request" from="." to="." method="_on_Question_Node_close_request"]
[connection signal="resize_request" from="." to="." method="_on_Question_Node_resize_request"]
[connection signal="pressed" from="timer/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="add button" to="." method="_on_add_button_pressed"]
